--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
         }
     },
     "peerDependencies": {
-        "react": ">=16.8.6",
+        "@types/react": "^16.8.6",
+        "react": "^16.8.0",
+        "react-dom": "^16.8.0",
         "styled-components": ">=4.2.0"
     },
     "dependencies": {
-        "@types/react": "^16.8.23",
         "@types/styled-components": "4.1.18",
         "global": "^4.4.0",
         "moment": "^2.24.0",
-        "react": "^16.8.6",
         "react-dates": "^21.4.0",
         "react-dropzone": "^10.2.1",
         "styled-components": "^4.3.2"
@@ -81,6 +81,7 @@
         "lint-staged": "^10.2.11",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.18.2",
+        "react": "^16.8.0",
         "react-dom": "^16.8.6",
         "react-test-renderer": "^16.8.6",
         "react-textarea-autosize": "^7.1.0",
